# fastapi-copilot-example

./: .flake8  .gitignore  Dockerfile  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
app/: main.py
app/routers/: users.py
app/schemas/: user.py
copilot/api/: manifest.yml
